fixing image alignment inconsistency for mobile view

--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 body{
     margin: 0;
     font-family: lato;
+    background-color: black;
 }
 .home{
     position: fixed;
